# iot-wasm-heartbeat

./: README.md  build_and_run.sh
firmware/: Cargo.toml  build.rs
firmware/src/: main.rs  wasm_runner.c
mock-emulator/: heartbeat_emulator.py
renode-config/: gd32vf103.repl
renode-scripts/: heartbeat-monitor.resc
scripts/: build_and_run.sh
server/: heartbeat_server.py  requirements.txt
